test/fail/duplicate-import1.mo
import { f } "duplicate-import/A";
import { f } "duplicate-import/B";

ignore f;
